infra/application/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: city-connect-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: city-connect.bastian-somon.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: city-connect
                port:
                  number: 8080
    # - host: city-connect-javadoc.bastian-somon.fr
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: city-connect-javadoc
    #             port:
    #               number: 80
